log
Wed Oct 14 05:10:46 UTC 2020: 
 sudoku.c | 23 ++++++++++++++++++++---
 1 file changed, 20 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:22: error: invalid initializer
    int matriz [9][9]=(n->sudo);
                      ^
sudoku.c:65:29: error: assignment to expression with array type
                n_node->sudo =matriz;
                             ^
sudoku.c:66:16: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
                push_back(list,n_node);
                ^~~~~~~~~
                pushBack
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 14 05:11:01 UTC 2020: 
 sudoku.c | 23 ++++++++++++++++++++---
 1 file changed, 20 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:22: error: invalid initializer
    int matriz [9][9]=(n->sudo);
                      ^
sudoku.c:65:29: error: assignment to expression with array type
                n_node->sudo =matriz;
                             ^
Compilation failed
Wed Oct 14 05:12:04 UTC 2020: 
 sudoku.c | 23 ++++++++++++++++++++---
 1 file changed, 20 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:22: error: invalid initializer
    int matriz [9][9]=(n->sudo);
                      ^
sudoku.c:65:29: error: assignment to expression with array type
                n_node->sudo =&matriz;
                             ^
Compilation failed
Wed Oct 14 05:12:40 UTC 2020: 
 sudoku.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:11: error: assignment to expression with array type
    matriz =(n->sudo);
           ^
sudoku.c:66:29: error: assignment to expression with array type
                n_node->sudo =&matriz;
                             ^
Compilation failed
Wed Oct 14 05:19:50 UTC 2020: 
 sudoku.c | 25 ++++++++++++++++++++++---
 1 file changed, 22 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:11: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
    matriz =(n->sudo);
           ^
sudoku.c:67:29: error: assignment to expression with array type
                n_node->sudo =&matriz;
                             ^
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 14 05:20:10 UTC 2020: 
 sudoku.c | 25 ++++++++++++++++++++++---
 1 file changed, 22 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:11: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
    matriz =(n->sudo);
           ^
sudoku.c:67:29: error: assignment to expression with array type
                n_node->sudo =matriz;
                             ^
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 14 05:21:15 UTC 2020: 
 sudoku.c | 25 ++++++++++++++++++++++---
 1 file changed, 22 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:11: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
    matriz =(n->sudo);
           ^
sudoku.c:67:29: error: assignment to expression with array type
                n_node->sudo =matriz;
                             ^
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 14 05:23:23 UTC 2020: 
 sudoku.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:66:29: error: assignment to expression with array type
                n_node->sudo =matriz;
                             ^
sudoku.c:67:16: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
                push_back(list,n_node);
                ^~~~~~~~~
                pushBack
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 14 05:24:34 UTC 2020: 
 sudoku.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
0159657
Wed Oct 14 05:25:07 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
4d8ce3e
Wed Oct 14 05:30:27 UTC 2020: 
 sudoku.c | 73 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 71 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
1f26b92
Wed Oct 14 05:37:09 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
fd57b27
Wed Oct 14 05:37:57 UTC 2020: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
04e0f7d
Wed Oct 14 05:39:40 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
65be8a3
Wed Oct 14 05:40:48 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3d72b98
Wed Oct 14 05:41:03 UTC 2020: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
39a51c0
Wed Oct 14 05:42:05 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8a45d60
Wed Oct 14 05:42:29 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
6dc5176
Wed Oct 14 05:43:04 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
6a6be82
Wed Oct 14 05:43:48 UTC 2020: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
180bcb1
Wed Oct 14 05:45:40 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
aae567a
Wed Oct 14 05:47:52 UTC 2020: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
b0fc11d
Wed Oct 14 05:49:25 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
4106a0b
Wed Oct 14 05:51:00 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
f3c27f1
Wed Oct 14 05:57:37 UTC 2020: 
 sudoku.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  5|3
total_score: 35/70
e7a52c7
Wed Oct 14 05:58:04 UTC 2020: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|3
total_score: 35/70
79c3ec4
Wed Oct 14 06:03:32 UTC 2020: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
7ecdb4c
Wed Oct 14 06:07:53 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
e757e28
Wed Oct 14 06:15:15 UTC 2020: 
 sudoku.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|4
total_score: 25/70
4fd63f1
Wed Oct 14 06:16:24 UTC 2020: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|3
total_score: 35/70
6e63e4c
Wed Oct 14 06:17:41 UTC 2020: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
c13a14f
Wed Oct 14 06:18:13 UTC 2020: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
4e4d80e
Wed Oct 14 06:18:33 UTC 2020: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
2564644
Wed Oct 14 06:25:20 UTC 2020: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
4617da3
Wed Oct 14 06:32:08 UTC 2020: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
570464e
Wed Oct 14 06:32:25 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
16f2ee7
Wed Oct 14 06:32:50 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
d6a53f6
Wed Oct 14 06:41:48 UTC 2020: 
 sudoku.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  6|2
total_score: 45/70
9302df9
